--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,7 @@ override_dh_auto_test:
 override_dh_auto_build:
 	make release
 	make 
+	make release SUPPORT=/opt/epics 
 
 override_dh_auto_install:
 	dh_auto_install -- prefix=/opt
