--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
   - script: |
       sudo apt-get -y install libreadline-dev
       sudo apt-get -y install perl re2c libboost-all-dev
-      sudo apt-get -y install build-essential 
+      sudo apt-get -y install build-essential devscripts
     displayName: 'Install Packages'
   
   - script: |
