Change to different debuild command (no sign)

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ jobs:
     displayName: Make tarballs and release files
 
   - script: |
-      debuild --no-tgz-check
+      debuild -i -us -uc -b
     displayName: Make Debian package
   
   - task: GitHubRelease@0
