Set release info back after creating tar

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,6 +45,7 @@ jobs:
       make release SUPPORT=/opt/epics
       make archive
       make versions > ../release.txt
+      make release
     displayName: Make tarballs and release files
 
   - script: |
