Deselect install on boost to only build test

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -81,7 +81,7 @@ jobs:
       unzip -q boost.zip
       cd boost_%BOOST_VERSION%
       call bootstrap.bat
-      .\b2 address-model=64 architecture=x86 --with-test link=static --prefix=%BUILD_STAGINGDIRECTORY%/deps install
+      .\b2 address-model=64 architecture=x86 --with-test link=static
     displayName: Build Boost
 
   - script: make update
