--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ jobs:
     displayName: Make tarballs and release files
 
   - script: |
-      debuild -i -us -uc -b
+      fakeroot debian/rules build
     displayName: Make Debian package
   
   - task: GitHubRelease@0
@@ -59,7 +59,9 @@ jobs:
       repositoryName: NSLS-II/epics-modules
       action: 'edit'
       target: '$(Build.SourceVersion)'
-      assets: '../*.tar.gz'
+      assets: |
+          '../*.tar.gz'
+          '../*.dpkg'
       assetUploadMode: 'replace'
       tagSource: 'Git tag'
       tag: 'v0.1'
