Try multiple lines for asset upload

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,9 @@ jobs:
       repositoryName: NSLS-II/epics-modules
       action: 'edit'
       target: '$(Build.SourceVersion)'
-      assets: '../*.deb'
+      assets: |
+          ../*.deb
+          ../*.tar.gz
       assetUploadMode: 'replace'
       tagSource: 'Git tag'
       tag: 'v0.1'
